testsuite/tests/properties/invalid_dflt_arg_val/bad_type.lkt
import common

class Example: FooNode {
    @export fun p(a: Bool=1): Bool = a
}
